<resources>
    <string name="app_name">Maestro and RecyclerView</string>
    <string name="add_maestro">Add Maestro</string>
    <string name="next_image">Next</string>
    <string name="title_edit_text">Title</string>
    <string name="description_edit_text">Description</string>
    <string name="done_button">Done</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>
    <string name="favorites">Favorites</string>
    <string name="info">Info</string>
</resources>