<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_menu"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/search_menu"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/refresh_menu"
        android:title="@string/refresh"
        android:icon="@drawable/ic_baseline_refresh"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/save_menu"
        android:title="@string/save"
        android:icon="@drawable/ic_baseline_save"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="1"
        />
</menu>