<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity"
    android:background="#F6F1F9">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@id/cardViewImage"
        app:layout_constraintEnd_toEndOf="@id/cardViewImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewImage"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/title_edit_text"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/description_edit_text"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/buttonDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done_button"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/material_purple" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:srcCompat="@drawable/maestro1"
                android:layout_margin="10dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_image"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintEnd_toEndOf="@id/cardViewImage"
        app:layout_constraintBottom_toBottomOf="@id/cardViewImage"
        android:backgroundTint="@color/material_purple" />




</androidx.constraintlayout.widget.ConstraintLayout>